--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
      <a class="logo link" href="./index.html">Web<span class="logo-web">Studio</span></a>
      <ul class="menu list">
         <li class="menu-item">
-            <a class="menu-link link" href="./index.html">Studio</a>
+            <a class="current menu-link link" href="./index.html">Studio</a>
          </li>
          <li class="menu-item">
             <a class="menu-link link" href="./portfolio.html">Portfolio</a>
@@ -42,7 +42,7 @@
             <div class="container">
             <h1 class="page-title">Effective Solutions
             for Your Business</h1>
-            <button type="button" class="modal-btn">Order Service</button>
+            <button type="button" class="modal-btn" data-modal-open>Order Service</button>
         </div>
         </section>
         <section class="section-two">
@@ -355,5 +355,17 @@
         </div>
     </div>
     </footer>
+
+    <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+            <button type="button" class="modal-close-btn" data-modal-close>
+                <svg class="btn-close" width="8" height="8">
+                    <use href="./images/close.svg#icon-close-btn"></use>
+                </svg>
+            </button>
+        </div>
+    </div>
+    
+    <script src="./js/modal.js"></script>
 </body>
 </html>
