--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
                     <a class="menu-link link" href="">Studio</a>
                 </li>
                 <li class="menu-item">
-                    <a class="menu-link link" href="">Portfolio</a>
+                    <a class="current menu-link link" href="">Portfolio</a>
                 </li>
                 <li class="menu-item">
                     <a class="menu-link link" href="">Contacts</a>
@@ -53,7 +53,11 @@
             <div class="container">
             <ul class="list card-set">
                     <li class="item">
-                        <a href="" class="card-item link"><img src="./images/banking.jpg" alt="Banking" width="360" height="300">
+                        <a href="" class="card-item link">
+                            <div class="card-item-img-wrapper">
+                            <img src="./images/banking.jpg" alt="Banking" width="360" height="300">
+                            <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                             <div class="text-container">
                                 <h2 class="functional-top-list">Banking App Interface Concept</h2>
                                 <p class="functional-text">App</p>
@@ -61,7 +65,11 @@
                         </a>
                     </li>
                     <li class="item">
-                        <a href="" class="card-item link"><img src="./images/cashlesspayment.jpg" alt="Cashless Payment" width="360" height="300">
+                        <a href="" class="card-item link">
+                            <div class="card-item-img-wrapper">
+                            <img src="./images/cashlesspayment.jpg" alt="Cashless Payment" width="360" height="300">
+                            <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                             <div class="text-container">
                                 <h2 class="functional-top-list">Cashless Payment</h2>
                                 <p class="functional-text">Marketing</p>
@@ -69,7 +77,11 @@
                         </a>
                     </li>
                     <li class="item">
-                        <a href="" class="card-item link"><img src="./images/meditaionapp.jpg" alt="Meditaion" width="360" height="300">
+                        <a href="" class="card-item link">
+                            <div class="card-item-img-wrapper">
+                            <img src="./images/meditaionapp.jpg" alt="Meditaion" width="360" height="300">
+                            <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                             <div class="text-container">
                                 <h2 class="functional-top-list">Meditation App</h2>
                                 <p class="functional-text">App</p>
@@ -77,7 +89,11 @@
                         </a>
                     </li>
                     <li class="item">
-                        <a href="" class="card-item link"><img src="./images/taxitervice.jpg" alt="Taxi" width="360" height="300">
+                        <a href="" class="card-item link">
+                            <div class="card-item-img-wrapper">
+                            <img src="./images/taxitervice.jpg" alt="Taxi" width="360" height="300">
+                            <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                             <div class="text-container">
                                 <h2 class="functional-top-list">Taxi Service</h2>
                                 <p class="functional-text">Marketing</p>
@@ -85,7 +101,11 @@
                         </a>
                     </li>
                     <li class="item">
-                        <a href="" class="card-item link"><img src="./images/screenillustrations.jpg" alt="Illustrations" width="360" height="300">
+                        <a href="" class="card-item link">
+                            <div class="card-item-img-wrapper">
+                            <img src="./images/screenillustrations.jpg" alt="Illustrations" width="360" height="300">
+                            <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                             <div class="text-container">
                                 <h2 class="functional-top-list">Screen Illustrations</h2>
                                 <p class="functional-text">Design</p>
@@ -93,7 +113,11 @@
                         </a>
                     </li>
                     <li class="item">
-                        <a href="" class="card-item link"><img src="./images/onlinecourses.jpg" alt="Online" width="360" height="300">
+                        <a href="" class="card-item link">
+                            <div class="card-item-img-wrapper">
+                            <img src="./images/onlinecourses.jpg" alt="Online" width="360" height="300">
+                            <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                             <div class="text-container">
                                 <h2 class="functional-top-list">Online Courses</h2>
                                 <p class="functional-text">Marketing</p>
@@ -101,7 +125,11 @@
                         </a>
                     </li>
                     <li class="item">
-                        <a href="" class="card-item link"><img src="./images/instagram.jpg" alt="Instagram" width="360" height="300">
+                        <a href="" class="card-item link">
+                            <div class="card-item-img-wrapper">
+                            <img src="./images/instagram.jpg" alt="Instagram" width="360" height="300">
+                            <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                             <div class="text-container">
                                 <h2 class="functional-top-list">Instagram Stories Concept</h2>
                                 <p class="functional-text">Design</p>
@@ -109,7 +137,11 @@
                         </a>
                     </li>
                     <li class="item">
-                        <a href="" class="card-item link"><img src="./images/organic.jpg" alt="Food" width="360" height="300">
+                        <a href="" class="card-item link">
+                            <div class="card-item-img-wrapper">
+                            <img src="./images/organic.jpg" alt="Food" width="360" height="300">
+                            <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                             <div class="text-container">
                                 <h2 class="functional-top-list">Organic Food</h2>
                                 <p class="functional-text">Web Site</p>
@@ -117,7 +149,11 @@
                         </a>
                     </li>
                     <li class="item">
-                        <a href="" class="card-item link"><img src="./images/fresh.jpg" alt="Coffee" width="360" height="300">
+                        <a href="" class="card-item link">
+                            <div class="card-item-img-wrapper">
+                            <img src="./images/fresh.jpg" alt="Coffee" width="360" height="300">
+                            <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                             <div class="text-container">
                                 <h2 class="functional-top-list">Fresh Coffee</h2>
                                 <p class="functional-text">Web Site</p>
@@ -171,6 +207,7 @@
             </div>
         </div>
     </footer>
+
     
 </body>
 </html>
